Upgrading to Java 17 and minor refactoring